Add empty about and press pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
     <ul>
         <h3>Alice Olausson</h3>
         <li><a href="{{ site.baseurl }}/">Home</a></li>
+        <li><a href="{{ site.baseurl }}/about">About</a></li>
+        <li><a href="{{ site.baseurl }}/press">Press</a></li>
         <li><a href="mailto: aliceolausson@mocoesba.art">Contact</a></li>       
     </ul>   
 </nav>
