--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -4,8 +4,9 @@
 
 $brown: #B59F62;
 $teal: #40FFDC;
+$blue: #3944BC;
 $black: #111;
-$primary: $teal;
+$primary: $blue;
 $dark:    $black;
 $enable-rounded: false;
 
