--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -5,8 +5,9 @@
 $brown: #B59F62;
 $teal: #40FFDC;
 $blue: #3944BC;
+$pink: #FAC6E5;
 $black: #111;
-$primary: $blue;
+$primary: $pink;
 $dark:    $black;
 $enable-rounded: false;
 
